--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "^6.16.3",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "prisma": "^6.16.2"
+    "nodemailer": "^7.0.6",
+    "prisma": "^6.16.3"
+  },
+  "type": "commonjs",
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
