--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.901.0",
+    "@aws-sdk/s3-request-presigner": "^3.901.0",
     "@prisma/client": "^6.16.2",
+    "busboy": "^1.6.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "prisma": "^6.16.2"
+    "prisma": "^6.16.2",
+    "uuid": "^13.0.0"
   }
 }
