--- a/backend/package.json
+++ b/backend/package.json
@@ -12,16 +12,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.901.0",
     "@prisma/client": "^6.16.3",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "nodemailer": "^7.0.6",
-    "prisma": "^6.16.3"
+    "express-validator": "^7.2.1",
+    "nodemailer": "^7.0.6"
   },
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "nodemon": "^3.1.10",
+    "prisma": "^6.16.3"
   }
 }
