--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "nodemailer": "^7.0.6",
-    "prisma": "^6.16.3"
+    "prisma": "^6.16.3",
+    "zod": "^4.1.11"
   },
   "type": "module",
   "devDependencies": {
