--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "prisma": "^6.16.3",
+    "stripe": "^19.2.0",
     "zod": "^4.1.11"
   },
   "type": "module",
